; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/char/hw_random/extr_mcs814x-rng.c_mcs814x_rng_data_read.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/char/hw_random/extr_mcs814x-rng.c_mcs814x_rng_data_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwrng = type { i64 }
%struct.mcs814x_rng_priv = type { i64 }

@RND = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hwrng*, i32*)* @mcs814x_rng_data_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs814x_rng_data_read(%struct.hwrng* %0, i32* %1) #0 {
  %3 = alloca %struct.hwrng*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.mcs814x_rng_priv*, align 8
  store %struct.hwrng* %0, %struct.hwrng** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.hwrng*, %struct.hwrng** %3, align 8
  %7 = getelementptr inbounds %struct.hwrng, %struct.hwrng* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.mcs814x_rng_priv*
  store %struct.mcs814x_rng_priv* %9, %struct.mcs814x_rng_priv** %5, align 8
  %10 = load %struct.mcs814x_rng_priv*, %struct.mcs814x_rng_priv** %5, align 8
  %11 = getelementptr inbounds %struct.mcs814x_rng_priv, %struct.mcs814x_rng_priv* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @RND, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @readl_relaxed(i64 %14)
  %16 = load i32*, i32** %4, align 8
  store i32 %15, i32* %16, align 4
  ret i32 4
}

declare dso_local i32 @readl_relaxed(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
